--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                 <p>Could you send over some pictures of your dog, please?</p>
               </li>
 
-              <li class="img-right"> <img src="images/dog-image-1.jpg">
-                <img src="images/dog-image-2.jpg">
-                <img src="images/dog-image-3.jpg">
+              <li class="img-right"> <img src="images/dog-image-1.jpg" alt=' image of a dog'>
+                <img src="images/dog-image-2.jpg" alt='image of a dog'>
+                <img src="images/dog-image-3.jpg" alt='image of a dog'>
               </li>
 
               <li class="right-buble">
